# drone-simulator

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  config.json  main.cpp  resources.json  tests.cpp
assets/models/drone/: drone_low_poly.mtl
assets/models/tree/: 10459_White_Ash_Tree_v1_L3.mtl  low_poly_tree_1.mtl
assets/shaders/: fragment.glsl  vertex.glsl
cmake/: conan.cmake  conanfile.hash  os.cmake
config/: config.json
include/: Application.h  Camera.h  GameObject.h  Logger.h  Player.h  Renderer.h  Shader.h
include/collisions/: Collider.h  ConvexPart.h  GJK.h
include/game_objects/: GameObject.h  Player.h  Terrain.h
include/rendering/: Mesh.h  Model.h  Renderer.h  Shader.h  Texture.h
include/resources/: AssetManager.h  FileIO.h  Image.h
include/terrain/: Chunk.h  ChunkPart.h  Generator.h  Noise.h
src/: Application.cpp  Camera.cpp  Logger.cpp  Player.cpp  Renderer.cpp  Shader.cpp
src/collisions/: Collider.cpp  ConvexPart.cpp  GJK.cpp
src/game_objects/: GameObject.cpp  Player.cpp  Terrain.cpp
src/rendering/: Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/resources/: AssetManager.cpp  FileIO.cpp  Image.cpp
src/terrain/: Chunk.cpp  ChunkPart.cpp  Generator.cpp  Noise.cpp
